--- a/test.html
+++ b/test.html
@@ -2,12 +2,13 @@
     <head>
         <title>test</title>
     </head>
-    <body>
-        <h1>一级标题</h1>
-        <h2>二级标题</h2>
-        <h3>三级标题</h3>
-        <p>这是一个段落。</p>
+    <body style ="background-color: #FFFF00;">
+        <h1 style="color: #0000FF;">一级标题</h1>
+        <h2 style="color: #008000;">二级标题</h2>
+        <h3 style="color: #00FF00;">三级标题</h3>
+        <p style="color: #0000F1;">这是一个段落。</p>
         <img src="sunflower.jpg" alt="向日葵">
+        <a href="https://www.google.com" style="color: #FF0000;">这是一个链接</a>
         <br>hello world
         <table border="1">
             <tr>
@@ -25,5 +26,23 @@
                 <td>8</td>
                 <td>9</td>
         </table>
+        <div id="container" style="width:600px">
+ 
+<div id="header" style="background-color:#0000F1;">
+<h1 style="margin-bottom:0;">网页标题</h1></div>
+ 
+<div id="menu" style="background-color:#AAD700;height:300px;width:200px;float:left;">
+<b>菜单</b><br>
+HTML<br>
+CSS<br>
+Python</div>
+
+<div id="content" style="background-color:#EEEEEE;height:300px;width:400px;float:left;">
+内容在这里</div>
+ 
+<div id="footer" style="background-color:#FFA500;clear:both;text-align:center;">
+版权 © Google.com</div>
+ 
+</div>
     </body>
 </html>
